--- a/templates/load-balancer.yaml
+++ b/templates/load-balancer.yaml
@@ -31,10 +31,16 @@ Resources:
         - Key: "idle_timeout.timeout_seconds"
           Value: "60"
 
-  TargetGroup:
+  SSLCertificate:
+    Type: AWS::CertificateManager::Certificate
+    Properties:
+      DomainName: !GetAtt LoadBalancer.DNSName
+      ValidationMethod: DNS
+
+  TargetGroupHTTP:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
     Properties:
-      Name: !Sub "meb-${AWS::Region}-tg-${Environment}"
+      Name: !Sub "meb-${AWS::Region}-tg-http-${Environment}"
       Port: 80
       Protocol: HTTP
       ProtocolVersion: HTTP1
@@ -50,15 +56,49 @@ Resources:
         - Key: "deregistration_delay.timeout_seconds"
           Value: "30"
 
-  Listener:
+  TargetGroupHTTPS:
+    Type: AWS::ElasticLoadBalancingV2::TargetGroup
+    Properties:
+      Name: !Sub "meb-${AWS::Region}-tg-https-${Environment}"
+      Port: 443
+      Protocol: HTTPS
+      ProtocolVersion: HTTP1
+      VpcId: !ImportValue VpcId
+      TargetType: ip
+      HealthCheckPath: "/health"
+      HealthCheckEnabled: true
+      HealthCheckIntervalSeconds: 30
+      HealthCheckTimeoutSeconds: 5
+      HealthyThresholdCount: 2
+      UnhealthyThresholdCount: 3
+      TargetGroupAttributes:
+        - Key: "deregistration_delay.timeout_seconds"
+          Value: "30"
+
+  ListenerHTTP:
+    Type: AWS::ElasticLoadBalancingV2::Listener
+    Properties:
+      DefaultActions:
+        - Type: redirect
+          RedirectConfig:
+            Protocol: HTTPS
+            Port: "443"
+            StatusCode: HTTP_301
+      LoadBalancerArn: !Ref LoadBalancer
+      Port: 80
+      Protocol: HTTP
+
+  ListenerHTTPS:
     Type: AWS::ElasticLoadBalancingV2::Listener
     Properties:
       DefaultActions:
         - Type: forward
-          TargetGroupArn: !Ref TargetGroup
+          TargetGroupArn: !Ref TargetGroupHTTPS
       LoadBalancerArn: !Ref LoadBalancer
-      Port: 80
-      Protocol: HTTP
+      Port: 443
+      Protocol: HTTPS
+      Certificates:
+        - CertificateArn: !Ref SSLCertificate
 
 Outputs:
   LoadBalancerDNSName:
@@ -66,13 +106,21 @@ Outputs:
     Value: !GetAtt LoadBalancer.DNSName
     Export:
       Name: LoadBalancerDNSName
+
   LoadBalancerArn:
     Description: ARN of the load balancer
     Value: !GetAtt LoadBalancer.LoadBalancerArn
     Export:
       Name: LoadBalancerArn
-  TargetGroupArn:
-    Description: ARN of the target group
-    Value: !Ref TargetGroup
+
+  TargetGroupHTTPArn:
+    Description: ARN of the HTTP target group
+    Value: !Ref TargetGroupHTTP
     Export:
-      Name: TargetGroupArn
+      Name: TargetGroupHTTPArn
+
+  TargetGroupHTTPSArn:
+    Description: ARN of the HTTPS target group
+    Value: !Ref TargetGroupHTTPS
+    Export:
+      Name: TargetGroupHTTPSArn
