--- a/templates/security_group.yaml
+++ b/templates/security_group.yaml
@@ -1,6 +1,12 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Description: Security Groups for Application Resources
 
+Parameters:
+  Environment:
+    Type: String
+    AllowedValues: [dev, test, prod]
+    Default: dev
+
 Resources:
   ApplicationSecurityGroup:
     Type: AWS::EC2::SecurityGroup
@@ -11,11 +17,11 @@ Resources:
         - IpProtocol: tcp
           FromPort: 80
           ToPort: 80
-          CidrIp: 0.0.0.0/0
+          SourceSecurityGroupId: !ImportValue LoadBalancerSecurityGroupId
         - IpProtocol: tcp
           FromPort: 443
           ToPort: 443
-          CidrIp: 0.0.0.0/0
+          SourceSecurityGroupId: !ImportValue LoadBalancerSecurityGroupId
 
 Outputs:
   SecurityGroupId:
