--- a/templates/load-balancer.yaml
+++ b/templates/load-balancer.yaml
@@ -49,16 +49,10 @@ Resources:
         - Key: "idle_timeout.timeout_seconds"
           Value: "60"
 
-  # SSLCertificate:
-  #   Type: AWS::CertificateManager::Certificate
-  #   Properties:
-  #     DomainName: www.example.com # !GetAtt LoadBalancer.DNSName
-  #     ValidationMethod: DNS
-
-  TargetGroupHTTP:
+  TargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
     Properties:
-      Name: !Sub "meb-${AWS::Region}-tg-http-${Environment}"
+      Name: !Sub "meb-${AWS::Region}-tg-${Environment}"
       Port: 80
       Protocol: HTTP
       ProtocolVersion: HTTP1
@@ -74,49 +68,15 @@ Resources:
         - Key: "deregistration_delay.timeout_seconds"
           Value: "30"
 
-  TargetGroupHTTPS:
-    Type: AWS::ElasticLoadBalancingV2::TargetGroup
-    Properties:
-      Name: !Sub "meb-${AWS::Region}-tg-https-${Environment}"
-      Port: 443
-      Protocol: HTTPS
-      ProtocolVersion: HTTP1
-      VpcId: !ImportValue VpcId
-      TargetType: ip
-      HealthCheckPath: "/health"
-      HealthCheckEnabled: true
-      HealthCheckIntervalSeconds: 30
-      HealthCheckTimeoutSeconds: 5
-      HealthyThresholdCount: 2
-      UnhealthyThresholdCount: 3
-      TargetGroupAttributes:
-        - Key: "deregistration_delay.timeout_seconds"
-          Value: "30"
-
-  ListenerHTTP:
-    Type: AWS::ElasticLoadBalancingV2::Listener
-    Properties:
-      DefaultActions:
-        - Type: redirect
-          RedirectConfig:
-            Protocol: HTTPS
-            Port: "443"
-            StatusCode: HTTP_301
-      LoadBalancerArn: !Ref LoadBalancer
-      Port: 80
-      Protocol: HTTP
-
-  ListenerHTTPS:
+  Listener:
     Type: AWS::ElasticLoadBalancingV2::Listener
     Properties:
       DefaultActions:
         - Type: forward
-          TargetGroupArn: !Ref TargetGroupHTTPS
+          TargetGroupArn: !Ref TargetGroup
       LoadBalancerArn: !Ref LoadBalancer
-      Port: 443
-      Protocol: HTTPS
-      # Certificates:
-      #   - CertificateArn: !Ref SSLCertificate
+      Port: 80
+      Protocol: HTTP
 
 Outputs:
   LoadBalancerDNSName:
@@ -124,24 +84,16 @@ Outputs:
     Value: !GetAtt LoadBalancer.DNSName
     Export:
       Name: LoadBalancerDNSName
-
   LoadBalancerArn:
     Description: ARN of the load balancer
     Value: !GetAtt LoadBalancer.LoadBalancerArn
     Export:
       Name: LoadBalancerArn
-
-  TargetGroupHTTPArn:
-    Description: ARN of the HTTP target group
-    Value: !Ref TargetGroupHTTP
+  TargetGroupArn:
+    Description: ARN of the target group
+    Value: !Ref TargetGroup
     Export:
-      Name: TargetGroupHTTPArn
-
-  TargetGroupHTTPSArn:
-    Description: ARN of the HTTPS target group
-    Value: !Ref TargetGroupHTTPS
-    Export:
-      Name: TargetGroupHTTPSArn
+      Name: TargetGroupArn
 
   LoadBalancerSecurityGroupId:
     Description: Security Group ID for Load Balancer
