added leastoutstandingrequests algorithm in target group

--- a/templates/load-balancer.yaml
+++ b/templates/load-balancer.yaml
@@ -67,6 +67,7 @@ Resources:
       TargetGroupAttributes:
         - Key: "deregistration_delay.timeout_seconds"
           Value: "30"
+      LoadBalancingAlgorithm: leastoutstandingrequests
 
   Listener:
     Type: AWS::ElasticLoadBalancingV2::Listener
