--- a/templates/load-balancer.yaml
+++ b/templates/load-balancer.yaml
@@ -67,7 +67,7 @@ Resources:
       TargetGroupAttributes:
         - Key: "deregistration_delay.timeout_seconds"
           Value: "30"
-      LoadBalancingAlgorithm: leastoutstandingrequests
+      LoadBalancerAlgorithm: least_outstanding_requests  
 
   Listener:
     Type: AWS::ElasticLoadBalancingV2::Listener
