--- a/templates/load-balancer.yaml
+++ b/templates/load-balancer.yaml
@@ -67,7 +67,8 @@ Resources:
       TargetGroupAttributes:
         - Key: "deregistration_delay.timeout_seconds"
           Value: "30"
-      LoadBalancerAlgorithm: least_outstanding_requests  
+        - Key: "load_balancing.algorithm.type"
+          Value: "least_outstanding_requests"
 
   Listener:
     Type: AWS::ElasticLoadBalancingV2::Listener
