--- a/templates/cloudfront.yaml
+++ b/templates/cloudfront.yaml
@@ -36,6 +36,15 @@ Resources:
           MinTTL: 0
           DefaultTTL: 86400
           MaxTTL: 31536000
+        CustomErrorResponses:
+          - ErrorCode: 404
+            ResponsePagePath: "/index.html"
+            ResponseCode: 200
+            ErrorCachingMinTTL: 300
+          - ErrorCode: 403
+            ResponsePagePath: "/index.html"
+            ResponseCode: 200
+            ErrorCachingMinTTL: 300
         ViewerCertificate:
           CloudFrontDefaultCertificate: true
         HttpVersion: http2
