--- a/templates/network.yaml
+++ b/templates/network.yaml
@@ -194,6 +194,25 @@ Resources:
         - Key: Name
           Value: !Sub "${AWS::StackName}-private-6-${Environment}"
 
+  NATElasticIP:
+    Type: AWS::EC2::EIP
+    Properties:
+      Domain: vpc
+      Tags:
+        - Key: Name
+          Value: !Sub ${Environment}-ElasticIP
+
+  NatGateway:
+    Type: AWS::EC2::NatGateway
+    DependsOn: PublicSubnet1
+    Properties:
+      ConnectivityType: public
+      AllocationId: !GetAtt NATElasticIP.AllocationId
+      SubnetId: !GetAtt PublicSubnet1.SubnetId
+      Tags:
+        - Key: Name
+          Value: !Sub ${Environment}-NatGateway
+
   PublicRouteTable:
     Type: AWS::EC2::RouteTable
     Properties:
