updated bucket name

--- a/templates/s3.yaml
+++ b/templates/s3.yaml
@@ -43,7 +43,7 @@ Resources:
   AccessLogsBucket:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: !Ref AccessLogsBucketName
+      BucketName: !Sub "${AccessLogsBucketName}-{AWS::StackName}"
       PublicAccessBlockConfiguration:
         BlockPublicAcls: true
         BlockPublicPolicy: true
@@ -63,7 +63,7 @@ Resources:
   AccessLogsBucketPolicy:
     Type: AWS::S3::BucketPolicy
     Properties:
-      Bucket: !Ref AccessLogsBucket
+      Bucket: !Sub "${AccessLogsBucket}-{AWS::StackName}"
       PolicyDocument:
         Version: "2012-10-17"
         Statement:
@@ -96,7 +96,7 @@ Resources:
   FrontendBucket:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: !Ref FrontendBucketName
+      BucketName: !Sub "${FrontendBucketName}-{AWS::StackName}"
       PublicAccessBlockConfiguration:
         BlockPublicAcls: true
         BlockPublicPolicy: false
