updated bucket name

--- a/s3-config.yaml
+++ b/s3-config.yaml
@@ -2,6 +2,6 @@ template-file-path: templates/s3.yaml
 
 parameters: 
   Environment: dev
-  FrontendBucketName: mebwebfrontend 
-  AccessLogsBucketName: mebwebaccesslogs
-  BackendArtifactBucketName: mebwebbackendartifact 
+  FrontendBucketName: frontendbucket 
+  AccessLogsBucketName: accesslogsbucket
+  BackendArtifactBucketName: backendartifactbucket 
