--- a/frontend-code-pipeline-config.yaml
+++ b/frontend-code-pipeline-config.yaml
@@ -4,5 +4,5 @@ parameters:
   Environment: dev
   FrontendGitHubRepositoryName: manikandan-c-kf/test-mebweb-frontend
   FrontendGitHubBranchName: main
-  FrontendBucketName: mebwebfrontend
+  FrontendBucketName: mebwbfrontendbucket 
   CodeStarConnectionArn: arn:aws:codeconnections:us-east-1:767397811981:connection/96833795-1cf4-40e6-9e89-56c098ee9af2
