--- a/parameter-store-config.yaml
+++ b/parameter-store-config.yaml
@@ -1,4 +1,4 @@
 template-file-path: templates/parameter-store.yaml
 
 parameters:
-  FrontendBucketName: mebwebfrontend 
+  FrontendBucketName: mebwbfrontendbucket 
