updated source type

--- a/templates/pipeline/frontend-code-pipeline.yaml
+++ b/templates/pipeline/frontend-code-pipeline.yaml
@@ -101,8 +101,9 @@ Resources:
     Properties:
       Name: FrontendDeploymentBuild
       Source:
-        Type: S3
-        Location: !Sub "${FrontendCodeBucket}/source.zip"
+        # Type: S3
+        # Location: !Sub "${FrontendCodeBucket}/source.zip"
+        Type: CODEPIPELINE
       Artifacts:
         Type: CODEPIPELINE
       Environment:
