--- a/templates/pipeline/frontend-code-pipeline.yaml
+++ b/templates/pipeline/frontend-code-pipeline.yaml
@@ -63,48 +63,6 @@ Resources:
                   - !Sub "arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/CLOUDFRONT_ID"
                   - !Sub "arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/S3_BUCKET"
 
-  # FrontendCodePipelineServiceRole:
-  #   Type: AWS::IAM::Role
-  #   Properties:
-  #     AssumeRolePolicyDocument:
-  #       Version: "2012-10-17"
-  #       Statement:
-  #         - Effect: Allow
-  #           Principal:
-  #             Service: codepipeline.amazonaws.com
-  #           Action: sts:AssumeRole
-  #     Policies:
-  #       - PolicyName: CodePipelinePermissions
-  #         PolicyDocument:
-  #           Version: "2012-10-17"
-  #           Statement:
-  #             - Effect: Allow
-  #               Action:
-  #                 - s3:PutObject
-  #                 - s3:GetObject
-  #                 - s3:ListBucket
-  #               Resource:
-  #                 - !Sub arn:aws:s3:::${FrontendBucketName}
-  #                 - !Sub arn:aws:s3:::${FrontendBucketName}/*
-  #             - Effect: Allow
-  #               Action:
-  #                 - codebuild:StartBuild
-  #                 - codebuild:BatchGetBuilds
-  #               Resource: "*"
-  #             - Effect: Allow
-  #               Action:
-  #                 - codestar-connections:UseConnection
-  #               Resource: !Sub "${CodeStarConnectionArn}"
-  #             - Effect: Allow
-  #               Action:
-  #                 - s3:GetObject
-  #                 - s3:GetBucketLocation
-  #                 - s3:PutObject
-  #                 - s3:ListBucket
-  #               Resource:
-  #                 - !Sub arn:aws:s3:::${FrontendCodeBucket}
-  #                 - !Sub arn:aws:s3:::${FrontendCodeBucket}/*
-
   FrontendCodePipelineServiceRole:
     Type: AWS::IAM::Role
     Properties:
@@ -122,13 +80,12 @@ Resources:
             Statement:
               - Effect: Allow
                 Action:
+                  - s3:PutObject
                   - s3:GetObject
-                  - s3:GetObjectVersion  # Required for accessing specific versions
-                  - s3:GetBucketVersioning  # Required if versioning is enabled
                   - s3:ListBucket
                 Resource:
-                  - !Sub arn:aws:s3:::${FrontendCodeBucket}
-                  - !Sub arn:aws:s3:::${FrontendCodeBucket}/*
+                  - !Sub arn:aws:s3:::${FrontendBucketName}
+                  - !Sub arn:aws:s3:::${FrontendBucketName}/*
               - Effect: Allow
                 Action:
                   - codebuild:StartBuild
@@ -138,6 +95,17 @@ Resources:
                 Action:
                   - codestar-connections:UseConnection
                 Resource: !Sub "${CodeStarConnectionArn}"
+              - Effect: Allow
+                Action:
+                  - s3:GetObject
+                  - s3:GetBucketLocation
+                  - s3:PutObject
+                  - s3:ListBucket
+                  - s3:GetBucketVersioning
+                  - s3:GetObjectVersion
+                Resource:
+                  - !Sub arn:aws:s3:::${FrontendCodeBucket}
+                  - !Sub arn:aws:s3:::${FrontendCodeBucket}/*
 
   FrontendCodeBuildProject:
     Type: AWS::CodeBuild::Project
