--- a/templates/pipeline/frontend-code-pipeline.yaml
+++ b/templates/pipeline/frontend-code-pipeline.yaml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: "2010-09-09"
-Description: Code pipeline Stack for front end and back end.
+Description: CodePipeline Stack for front end with automatic S3 trigger.
 
 Parameters:
   Environment:
@@ -18,8 +18,11 @@ Parameters:
     Description: CodeStarConnectionArn
   FrontendCodeBucket:
     Type: String
-    Description: S3 bucket name for front end code
-  
+    Description: S3 bucket name for front end code  
+  CodePipelineName:
+    Type: String
+    Description: Name of the CodePipeline
+
 Resources:
   FrontendCodeBuildServiceRole:
     Type: AWS::IAM::Role
@@ -107,13 +110,31 @@ Resources:
                   - !Sub arn:aws:s3:::${FrontendCodeBucket}
                   - !Sub arn:aws:s3:::${FrontendCodeBucket}/*
 
+  EventBridgeInvokePipelineRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service: events.amazonaws.com
+            Action: sts:AssumeRole
+      Policies:
+        - PolicyName: StartCodePipeline
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - codepipeline:StartPipelineExecution
+                Resource: !Sub "arn:aws:codepipeline:${AWS::Region}:${AWS::AccountId}:${CodePipelineName}"
+
   FrontendCodeBuildProject:
     Type: AWS::CodeBuild::Project
     Properties:
       Name: FrontendDeploymentBuild
       Source:
-        # Type: S3
-        # Location: !Sub "${FrontendCodeBucket}/source.zip"
         Type: CODEPIPELINE
       Artifacts:
         Type: CODEPIPELINE
@@ -126,7 +147,7 @@ Resources:
   FrontendCodePipeline:
     Type: AWS::CodePipeline::Pipeline
     Properties:
-      Name: "Frontend-Code-Pipeline"
+      Name: !Ref CodePipelineName
       RoleArn: !GetAtt FrontendCodePipelineServiceRole.Arn
       Stages:
         - Name: Source
@@ -162,3 +183,27 @@ Resources:
       ArtifactStore:
         Type: S3
         Location: !Sub "${FrontendBucketName}"
+
+  S3TriggerEventRule:
+    Type: AWS::Events::Rule
+    Properties:
+      Name: !Sub "S3Trigger-${CodePipelineName}"
+      Description: "Trigger CodePipeline when a new object is uploaded to S3"
+      EventPattern:
+        source:
+          - "aws.s3"
+        detail-type:
+          - "Object Created"
+        detail:
+          bucket:
+            name:
+              - !Ref FrontendCodeBucket
+      Targets:
+        - Arn: !Sub "arn:aws:codepipeline:${AWS::Region}:${AWS::AccountId}:${CodePipelineName}"
+          Id: "CodePipelineTrigger"
+          RoleArn: !GetAtt EventBridgeInvokePipelineRole.Arn
+
+Outputs:
+  EventBridgeRule:
+    Description: "The EventBridge Rule that triggers the pipeline"
+    Value: !Ref S3TriggerEventRule
