updated the source from github to s3

--- a/backend-code-pipeline-config.yaml
+++ b/backend-code-pipeline-config.yaml
@@ -6,3 +6,5 @@ parameters:
   BackendGitHubBranchName: main
   CodeStarConnectionArn: arn:aws:codeconnections:us-east-1:961341513566:connection/cbd1908f-af4a-42bf-8464-9fc9e8ffc11d
   ECRRepositoryName: mebweb-ecr-repository
+  BackendCodeBucket: azuredevopsbackend
+  CodePipelineName: Backend-Code-Pipeline
