added cloudformation policy for sam

--- a/templates/pipeline/sam-pipeline.yaml
+++ b/templates/pipeline/sam-pipeline.yaml
@@ -54,6 +54,7 @@ Resources:
                   - cloudformation:UpdateStack
                   - cloudformation:DeleteStack
                   - cloudformation:DescribeStackEvents
+                  - cloudformation:GetTemplateSummary
                 Resource: "*"
               - Effect: Allow
                 Action:
