added policy to sam

--- a/templates/pipeline/sam-pipeline.yaml
+++ b/templates/pipeline/sam-pipeline.yaml
@@ -67,6 +67,7 @@ Resources:
                   - lambda:CreateFunction
                   - lambda:DeleteFunction
                   - lambda:TagResource 
+                  - lambda:ListTags
                 Resource: "*"
               - Effect: Allow
                 Action:
