added policy for the ecs task

--- a/templates/ecs.yaml
+++ b/templates/ecs.yaml
@@ -22,6 +22,7 @@ Resources:
             Action: sts:AssumeRole
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy
+        - arn:aws:iam::aws:policy/AmazonElasticContainerRegistryPublicPowerUser
       Policies:
         - PolicyName: ECRAccess
           PolicyDocument:
