--- a/templates/pipeline/backend-code-pipeline.yaml
+++ b/templates/pipeline/backend-code-pipeline.yaml
@@ -34,6 +34,8 @@ Resources:
             Principal:
               Service: codebuild.amazonaws.com
             Action: sts:AssumeRole
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/AmazonElasticContainerRegistryPublicPowerUser
       Policies:
         - PolicyName: BackendBuildPermissions
           PolicyDocument:
