--- a/ecs-config.yaml
+++ b/ecs-config.yaml
@@ -3,3 +3,4 @@ template-file-path: templates/ecs.yaml
 parameters:
   Environment: dev
   ECSContainerName: mebweb-container
+  ECRRepoName: "mebweb-ecr-repository"
