--- a/templates/ecs.yaml
+++ b/templates/ecs.yaml
@@ -26,6 +26,7 @@ Resources:
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy
         - arn:aws:iam::aws:policy/AmazonElasticContainerRegistryPublicPowerUser
+        - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryPowerUser
       Policies:
         - PolicyName: ECRAccess
           PolicyDocument:
