added default private route

--- a/templates/network.yaml
+++ b/templates/network.yaml
@@ -273,6 +273,14 @@ Resources:
         - Key: Name
           Value: !Sub "${AWS::StackName}-private-rt-${Environment}"
 
+  DefaultPrivateRoute:
+    Type: AWS::EC2::Route
+    DependsOn: NatGateway
+    Properties:
+      RouteTableId: !Ref PrivateRouteTable
+      DestinationCidrBlock: 0.0.0.0/0
+      NatGatewayId: !Ref NatGateway
+
   PrivateSubnet1RouteTableAssociation:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
